Single post. Style for basic HTML TAGS. Style for image alignment. Minor fix for comment system

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -24,8 +24,53 @@ blockquote:before, blockquote:after, q:before, q:after {
   content: none; }
 
 table {
+  margin-top: 30px;
   border-collapse: collapse;
-  border-spacing: 0; }
+  border: 1px solid #dee2e6;
+  width: 100%;
+  max-width: 100%;
+  margin-bottom: 1rem;
+  background-color: transparent; }
+  table thead {
+    display: table-header-group;
+    vertical-align: middle;
+    border-color: inherit; }
+  table th {
+    vertical-align: bottom;
+    border-bottom: 1px solid #dee2e6;
+    padding: .75rem;
+    font-weight: 600;
+    text-align: left; }
+  table td {
+    border-bottom: 1px solid #dee2e6;
+    padding: .75rem;
+    vertical-align: top;
+    text-align: left; }
+
+dl {
+  letter-spacing: -0.31em;
+  *letter-spacing: normal;
+  word-spacing: -0.43em; }
+
+dl dt,
+dl dd {
+  display: inline-block;
+  *display: inline;
+  zoom: 1;
+  letter-spacing: normal;
+  word-spacing: normal;
+  vertical-align: top;
+  margin: 0; }
+
+dl dt {
+  font-weight: 600;
+  width: 48%;
+  padding: 0 2% 0.5em 0; }
+
+dl dd {
+  margin-right: -1px;
+  width: 50%;
+  padding: 0 0 0.5em 0; }
 
 *, *:before, *:after {
   box-sizing: border-box; }
@@ -56,6 +101,11 @@ input, textarea, select, button {
   .btn--slider {
     text-transform: uppercase;
     margin-top: 50px; }
+  .btn--form {
+    padding: 10px 18px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer; }
 
 .header__container {
   width: 1170px;
@@ -271,13 +321,22 @@ input, textarea, select, button {
 .post-type-post img {
   max-width: 100%; }
 
+.post-main-single, .post-aside-single {
+  margin-top: 0; }
+
+.article-thumbnail {
+  margin-bottom: 10px; }
+
 .article-content {
   padding-bottom: 30px; }
   .article-content .article-header {
     font-size: 40px;
     font-weight: 700;
     color: #000;
-    margin-bottom: 10px; }
+    margin-bottom: 5px; }
+  .article-content .blog-author {
+    margin-top: 0;
+    margin-bottom: 20px; }
   .article-content p, .article-content ul li, .article-content ol li {
     font-weight: 300;
     color: #000;
@@ -301,11 +360,59 @@ input, textarea, select, button {
     list-style: none; }
   .article-content a:not(.btn) {
     color: #ed1c24; }
+  .article-content ol {
+    counter-reset: ordered-list; }
+    .article-content ol li:before {
+      counter-increment: ordered-list;
+      content: counter(ordered-list) "."; }
+  .article-content em {
+    font-style: italic; }
+  .article-content strong {
+    font-weight: 900; }
+  .article-content h1, .article-content h2 {
+    font-size: 38px; }
+  .article-content h3 {
+    font-size: 24px; }
+  .article-content h4 {
+    font-size: 18px; }
+  .article-content h1, .article-content h2, .article-content h3, .article-content h4, .article-content h5, .article-content h6 {
+    font-weight: 700;
+    color: #000; }
+  .article-content blockquote {
+    background: #f9f9f9;
+    border-left: 10px solid #ccc;
+    margin: 1.5em 10px 1.5em 0;
+    padding: 0.5em 10px;
+    quotes: "“" "”"; }
+  .article-content blockquote:before {
+    color: #ccc;
+    content: open-quote;
+    font-size: 4em;
+    line-height: 0.1em;
+    margin-right: 0.25em;
+    vertical-align: -0.4em; }
+  .article-content blockquote p {
+    display: inline; }
+  .article-content .alignleft {
+    float: left;
+    margin: 0 15px 5px 0; }
+  .article-content .alignright {
+    float: right;
+    margin: 0 0 5px 15px; }
+  .article-content .aligncenter {
+    clear: both;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center; }
+  .article-content figcaption {
+    font-weight: 600;
+    color: #000; }
 
 *, *:before, *:after {
   box-sizing: border-box; }
 
-.article-content * + h1, .article-content * + h2, .article-content * + h3, .article-content * + h4, .article-content * + p, .article-content * + iframe, .article-content * + ul, .article-content * + ol {
+.article-content * + h1, .article-content * + h2, .article-content * + h3, .article-content * + h4, .article-content * + h5, .article-content * + h6, .article-content * + p, .article-content * + iframe, .article-content * + ul, .article-content * + ol, .article-content * + dl, .article-content * + figure {
   margin-top: 30px; }
 
 .comments .comments-title {
