--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -18,6 +18,10 @@
     margin-top: 50px;
   }
 
-
-
+  &--form {
+    padding: 10px 18px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
 }
